--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:inputType="textEmailAddress"
-                android:text="Correo"
+                android:text="Nombre Comleto"
                 android:textColor="@color/white"
                 android:textSize="24dp" />
             <EditText
@@ -77,6 +77,25 @@
                 android:padding="20dp"
                 android:layout_marginTop="20dp"
                 android:inputType="number" />
+
+            <EditText
+                android:id="@+id/edtcorreo2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:inputType="textEmailAddress"
+                android:text="Correo"
+                android:textColor="@color/white"
+                android:textSize="24dp" />
+
+            <EditText
+                android:id="@+id/edtescribacontraseña2"
+                android:background="@drawable/radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:layout_marginTop="20dp"
+                android:inputType="textPassword"/>
 
             <EditText
                 android:id="@+id/edtcontraseña"
@@ -109,13 +128,6 @@
                     android:background="@drawable/radiobutton"
                     android:layout_margin="20dp"
                     android:gravity="center">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:padding="20dp"
-                        android:text="Iniciar Sesión"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -127,8 +139,8 @@
                     android:gravity="center">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="130dp"
+                        android:layout_height="match_parent"
                         android:padding="20dp"
                         android:text="Registrarse"
                         android:textAlignment="center"
@@ -138,7 +150,7 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    </ScrollView>
+</ScrollView>
 
 
 
