--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:text="BIENVENIDO A"
-                android:textSize="16dp"
+                android:textSize="24dp"
                 android:textColor="@color/purple_700"/>
 
             <TextView
@@ -55,9 +55,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="24dp"
-                android:text="Inicio de Sesión"
+                android:text="Registro"
                 android:textAlignment="center"
-                android:textColor="@color/white">
+                android:textColor="#B3F8F7F7">
             </TextView>
 
             <EditText
@@ -67,11 +67,12 @@
                 android:layout_marginTop="25dp"
                 android:inputType="textEmailAddress"
                 android:text="Nombre Completo"
-                android:textColor="@color/white"
+                android:textColor="#B3F8F7F7"
                 android:textSize="24dp" />
+
             <EditText
                 android:id="@+id/edtescribacorreo"
-                android:background="@drawable/radiobutton"
+                android:background="@drawable/inicio_sesion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
@@ -85,12 +86,12 @@
                 android:layout_marginTop="25dp"
                 android:inputType="textEmailAddress"
                 android:text="Correo"
-                android:textColor="@color/white"
+                android:textColor="#B3F8F7F7"
                 android:textSize="24dp" />
 
             <EditText
                 android:id="@+id/edtescribacontraseña2"
-                android:background="@drawable/radiobutton"
+                android:background="@drawable/inicio_sesion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
@@ -104,12 +105,12 @@
                 android:layout_marginTop="25dp"
                 android:inputType="textEmailAddress"
                 android:text="Contraseña"
-                android:textColor="@color/white"
+                android:textColor="#B3F8F7F7"
                 android:textSize="24dp" />
 
             <EditText
                 android:id="@+id/edtescribacontraseña"
-                android:background="@drawable/radiobutton"
+                android:background="@drawable/inicio_sesion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
@@ -130,10 +131,9 @@
                     android:layout_marginLeft="140dp"
                     android:padding="20dp"
                     android:text="Registrarse"
-                    android:textAlignment="center"
                     android:backgroundTint="#22BD5C"
-                    android:textColor="@color/white"
-                    android:textSize="15dp" />
+                    android:textAlignment="center"
+                    android:textSize="16dp" />
 
 
             </LinearLayout>
