--- a/app/src/main/res/layout/restaurante.xml
+++ b/app/src/main/res/layout/restaurante.xml
@@ -10,25 +10,34 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ravity="start">
 
 
-            <ImageView
-                android:layout_width="171dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/logo"/>
+                <ImageView
+                    android:layout_width="198dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="right"
+                    android:src="@drawable/logo" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end">
+
+                <ImageView
+                    android:layout_width="54dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/barras" />
+            </LinearLayout>
 
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/barras" />
-
 
     </LinearLayout>
 
